--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
+GIN_MODE=debug
 PORT=3000
 
 DATABASE_URL=postgres://localhost:5432/go_jwt_auth
+
+# SMTP Configuration
+EMAIL_FROM=dionatsir@gmail.com
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=587
+SMTP_USERNAME=8475894a977e60
+SMTP_PASSWORD=a0b9685afa1934
