--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-GIN_MODE=debug
+APP_NAME="Go JWT Auth"
+APP_URL=http://localhost:3000
+APP_ENV=development
 PORT=3000
 
 DATABASE_URL=postgres://localhost:5432/go_jwt_auth
@@ -9,3 +11,7 @@ SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=587
 SMTP_USERNAME=8475894a977e60
 SMTP_PASSWORD=a0b9685afa1934
+
+# JWT Configuration
+ACCESS_TOKEN_SECRET=accessSecret
+REFRESH_TOKEN_SECRET=refreshSecret
